# Chip-Orchestra

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  run.sh  start-chip-orchestra.ps1  stop-chip-orchestra.ps1
agent-service/: Dockerfile  Makefile  README.md  extract.py  lessons.py  llm.py  main.py  requirements.txt  research.py  uploads.py  verilog_check.py
agent-service/agents/: __init__.py  deep_agent.py  graph.py  result.py  rtl_author.py  stage_handlers.py
agent-service/context/: __init__.py  files.py
backend/: .env.example  .gitignore  README.md  pyproject.toml  run.sh
backend/chip_orchestra_backend/: __init__.py  config.py  control.py  main.py  models.py  persistence.py  runner.py  store.py
backend/chip_orchestra_backend/agent/: __init__.py  eda.py  graph.py  llm.py  prompts.py  research.py
core/: .env.example  docker-compose.yml
docs/: ARCHITECTURE.md  SETUP.md  architecture_v2.md  development.md  test-plan.md
eda/: .env.example  docker-compose.yml
eda-service/: Dockerfile  README.md  main.py  requirements.txt  runner.py  workspace.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
nginx/: chip-orchestra.conf
operator-service/: Dockerfile  README.md  go.mod
orchestrator-service/: Dockerfile  README.md  go.mod  go.sum
scripts/: install.sh  migrate.sh  ollama-docker-proxy.py  run.sh  setup.sh  start.sh  stop.sh  test.sh  ufw-core.sh  ufw-eda.sh
tests/: smoke_test_nanocgra.sh
(+431 files in other folders)
