[project]
name = "chip-orchestra-backend"
version = "0.1.0"
description = "Agentic RTL-to-GDSII backend for the Chip Orchestra frontend. Agent core adapted from GarudaChip (LangGraph + Ollama)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "boto3>=1.34",
]

[project.optional-dependencies]
# Optional Google Gemini fallback provider (set LLM_PROVIDER=gemini + GOOGLE_API_KEY)
gemini = ["langchain-google-genai>=2.0"]
# Web research: crawl reference designs (needs `playwright install chromium`)
web = ["crawl4ai>=0.4", "ddgs>=6.0"]
# FAISS RAG over crawled / local reference corpus
rag = ["faiss-cpu>=1.8", "sentence-transformers>=3.0"]
# Everything needed for the grounded (crawl4ai + RAG) agent
research = [
    "crawl4ai>=0.4",
    "ddgs>=6.0",
    "faiss-cpu>=1.8",
    "sentence-transformers>=3.0",
]

[tool.uv]
# This is an application, not a distributable library.
package = false

[tool.ruff]
line-length = 100
